@@ -2478,6 +2478,22 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|numVersions
+operator|>
+literal|0
+operator|&&
+name|result
+operator|.
+name|size
+argument_list|()
+operator|>=
+name|numVersions
+condition|)
+block|{
+break|break;
+block|}
 block|}
 else|else
 block|{
@@ -2511,20 +2527,9 @@ block|}
 block|}
 block|}
 block|}
-if|if
-condition|(
-name|numVersions
-operator|>
-literal|0
-operator|&&
-name|result
-operator|.
-name|size
-argument_list|()
-operator|>=
-name|numVersions
-condition|)
+else|else
 block|{
+comment|// By L.N. HBASE-684, map is sorted, so we can't find match any more.
 break|break;
 block|}
 block|}
@@ -2536,6 +2541,7 @@ name|v
 range|:
 name|victims
 control|)
+block|{
 name|map
 operator|.
 name|remove
@@ -2543,6 +2549,7 @@ argument_list|(
 name|v
 argument_list|)
 expr_stmt|;
+block|}
 return|return
 name|result
 return|;
